--- a/src/pretalx/cfp/templates/cfp/event/user_submission_edit.html
+++ b/src/pretalx/cfp/templates/cfp/event/user_submission_edit.html
@@ -45,7 +45,7 @@
                 {% endblocktrans %}
                 {{ submission.display_speaker_names }}{% if can_invite_speakers %},
                 <div class="input-group">
-                    <input name="email" class="form-control form-control-sm" placeholder="mail@example.org">
+                    <input name="email" class="form-control form-control-sm" placeholder="other@example.org">
                     <span class="input-group-btn">
                         <button class="btn btn-success btn-sm">
                             <i class="fa fa-plus"></i>
