--- a/src/pretalx/common/templates/common/error.html
+++ b/src/pretalx/common/templates/common/error.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %} :: pretalx</title>
+        <title>{% block title %}{% endblock %}</title>
         {% compress css %}
         <link rel="stylesheet" type="text/x-scss" href="{% static "common/scss/error.scss" %}"/>
         {% endcompress %}
